# kernel-chat

./: .dockerignore  .env.example  CLAUDE.md  PRD.md  README.md  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile
docker/gemma/: Dockerfile
docker/postgres/: Dockerfile  initdb.sql
docs/: llm-eval.md
scripts/: create_indexes.sql  ingest.sh  run.sh  setup_db.sh
src/chat/: cli.py  session.py
src/db/: queries.py  schema.sql
src/inference/: gemma.py  openrouter.py  prompts.py  tools.py
src/ingest/: embed.py  extract.py  load.py
src/utils/: config.py  logging.py
tests/: test_extract.py  test_queries.py  test_tools.py
