[project]
name = "kernel-chat"
version = "0.1.0"
description = "Semantic and temporal querying of Linux kernel git history"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "einops>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
